apps/spark/overlay/tabulario/spark-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceberg-spark-rest
  namespace: spark
  labels:
    service: iceberk-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      service: iceberk-rest
  template:
    metadata:
      labels:
        service: iceberk-rest
    spec:
      containers:
      - name: iceberg-spark-rest
        image: tabulario/iceberg-rest:latest
        ports:
        - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: iceberg-rest-svc
  namespace: spark
spec:
  type: ClusterIP
  selector:
    service: iceberg-rest
  ports:
    - name: iceberg-rest-port
      protocol: TCP
      port: 8181
      targetPort: 8181
