apps/spark/overlay/tabulario/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: spark.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-iceberg-svc
            port:
              number: 8888
